// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilization Card Details Description is working properly 1`] = `
<span
  class="card-pf-utilization-card-details-description"
>
  <span
    class="card-pf-utilization-card-details-line-1"
  >
    Available
  </span>
  <span
    class="card-pf-utilization-card-details-line-2"
  >
    of 1300 Gbps
  </span>
</span>
`;

exports[`Utilization Card Details Line1,2 is working properly 1`] = `
<div>
  <span
    class="card-pf-utilization-card-details-line-1"
  >
    Available
  </span>
  <span
    class="card-pf-utilization-card-details-line-2"
  >
    of 1300 Gbps
  </span>
</div>
`;

exports[`Utilization Card Details is working properly 1`] = `
<p
  class="card-pf-utilization-details"
>
  <span
    class="card-pf-utilization-card-details-count"
  >
    200
  </span>
  <span
    class="card-pf-utilization-card-details-description"
  >
    <span
      class="card-pf-utilization-card-details-line-1"
    >
      Available
    </span>
    <span
      class="card-pf-utilization-card-details-line-2"
    >
      of 1300 Gbps
    </span>
  </span>
</p>
`;

exports[`Utilization Card is working properly 1`] = `
<div
  class="card-pf card-pf-utilization"
>
  <h2
    class="card-pf-title"
  >
    Card Title
  </h2>
</div>
`;
